<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.sergiojosemp.obddashboard.vm.VerboseViewModel" />
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:id="@+id/vehicle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/vehicleSpeedText"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:tag="SPEED"
                android:text="@string/text_zero"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/abc_text_size_display_3_material" />
            <TextView
                android:id="@+id/voltage_text"
                android:layout_width="102dp"
                android:layout_height="30dp"
                android:text="@{viewmodel.accelerationIndicator}"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/compass_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{viewmodel.compassIndicator, default = N}"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/abc_text_size_display_3_material" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fuelConsumptionText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="FUEL_CONSUMPTION"
                android:text="@string/text_consumption_default"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/engineRuntimeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="ENGINE_RUNTIME"
                android:text="@string/text_runtime_default"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/engineRPMText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:tag="ENGINE_RPM"
                android:text="" />
        </TableRow>

        <ScrollView
            android:id="@+id/data_scroll"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:elevation="2dp"
            android:outlineProvider="bounds">

            <TableLayout
                android:id="@+id/data_table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*"></TableLayout>
        </ScrollView>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gpsSatusTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_gps"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/bluetoothSatusTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_bluetooth"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/abc_text_size_medium_material" />

            <TextView
                android:id="@+id/obdSatusTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_obd"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/abc_text_size_medium_material" />


        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gpsPositionValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/btStatusValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/obdValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF" />
        </TableRow>

    </LinearLayout>
</layout>